# DisMusic

./: .env.example  .gitignore  LICENSE  README.md  backend.py  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tailwind.config.ts
app/: Providers.tsx  clientLayout.tsx  globals.css  layout.tsx  page.tsx
app/albums/: page.tsx
app/appback/: clientLayout.tsx  layout.tsx  page.tsx
app/appback/artists/: page.tsx
app/appback/context/: MusicContext.tsx
app/appback/lyrics/: page.tsx
app/appback/playlists/: page.tsx
app/appback/queue/: page.tsx
app/artists/: page.tsx
app/context/: MusicContext.tsx
app/downloads/: page.tsx
app/favorites/: page.tsx
app/login/: page.tsx
app/lyrics/: page.tsx
app/playlists/: page.tsx
app/playlists/[id]/: page.tsx
app/queue/: page.tsx
app/search/: page.tsx
app/stats/: page.tsx
backend/: appleMusicToken.js  discordAuth.js  index.js
components/: Player.tsx  RequireAuth.tsx
components/ui/: button.tsx  dialog.tsx  slider.tsx
configuration/: config.json
lib/: lavalinkConnect.ts
public/: manifest.json
routes/: routes.py
routes/main/: queue.py
views/main/: current-queue.html
views/partials/: footer.html  navbar.html
views/templates/: base.html
